--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.20.0",
     "@sendgrid/mail": "^8.1.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
