--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sentiment": "^5.0.2",
     "web-vitals": "^2.1.4"
