--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "firebase-admin": "^12.5.0",
+    "handlebars": "^4.7.8",
     "nodemailer": "^6.9.15"
   },
   "devDependencies": {
