--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,1 +1,10 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/server/api" }] }
+{
+    "version": 2,
+    "builds": [
+      { "src": "server/index.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "server/index.js" }
+    ]
+  }
+  
