--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://admin-smart-city.vercel.app/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@google/generative-ai": "^0.20.0",
