--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sentiment": "^5.0.2",
+    "swiper": "^11.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
